# artigraph

./: .gitignore  404.html  LICENSE.txt  README.md  Untitled.ipynb  example.db  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: .hatch-run.yml  check.yml  publish-docs.yml  publish-pypi.yml  publish.yml
api/: index.html
building-blocks/: index.html
common-operations/: index.html
creating-graphs/: index.html
database-schema/: index.html
docs/: api.md  beyond-the-basics.md  building-blocks.md  call-graphs.md  common-operations.md  creating-graphs.md  database-schema.md  filtering.md  function-graphs.md  index.md  models.md  queries.md  schema.md  serializers.md  setup.md  storage.md  style.css  usage.md
filtering/: index.html
models/: index.html
search/: search_index.json
serializers/: index.html
setup/: index.html
src/artigraph/: __init__.py  db.py  py.typed  utils.py
src/artigraph/addons/model/: dataclasses.py
src/artigraph/addons/serializer/: __init__.py  numpy.py
src/artigraph/addons/storage/: aws.py
src/artigraph/api/: __init__.py  _modeled_types.py  artifact.py  artifact_group.py  artifact_model.py  filter.py  func.py  funcs.py  group.py  link.py  model.py  node.py  run.py  span.py
src/artigraph/api/model/: base.py  filter.py  group.py
src/artigraph/contrib/: dataclasses.py
src/artigraph/contrib/serializer/: polars.py
src/artigraph/contrib/storage/: __init__.py
src/artigraph/core/: __init__.py  db.py  linker.py
src/artigraph/core/api/: artifact.py  base.py  filter.py  funcs.py  link.py  node.py  proto.py
src/artigraph/core/graph/: trace.py
src/artigraph/core/model/: __init__.py  _modeled_types.py  base.py  dataclasses.py  filter.py  group.py  model.py
src/artigraph/core/orm/: __init__.py  artifact.py  base.py  link.py  node.py
src/artigraph/core/serializer/: __init__.py  base.py  datetime.py  json.py
src/artigraph/core/storage/: __init__.py  file.py
src/artigraph/core/utils/: anysync.py  misc.py  type_hints.py
src/artigraph/extra/: networkx.py  numpy.py  plotly.py  polars.py
src/artigraph/extra/serializer/: numpy.py  pandas.py  plotly.py  polars.py
src/artigraph/extra/storage/: aws.py
src/artigraph/extras/: __init__.py  networkx.py  numpy.py  plotly.py  polars.py  pyarrow.py  pydantic.py
src/artigraph/model/: __init__.py  artifact.py  base.py  builtins.py  data.py  dict.py  filter.py  group.py  list.py  markdown.py  span.py
src/artigraph/orm/: __init__.py  artifact.py  base.py  group.py  link.py  node.py  run.py  run_parameter.py  span.py
src/artigraph/serializer/: __init__.py  _core.py  bytes.py  core.py  datetime.py  json.py  numpy.py  pandas.py  plotly.py  polars.py  pyarrow.py  string.py
src/artigraph/storage/: __init__.py  _core.py  aws.py  core.py  file.py
src/artigraph/utils/: misc.py
storage/: index.html
tests/: common.py  conftest.py  test_db.py  test_orm.py  test_storage.py  test_utils.py
tests/common/: __init__.py  check.py  model.py  orm.py
tests/test_api/: test_artifact.py  test_artifact_model.py  test_base.py  test_filter.py  test_func.py  test_funcs.py  test_node.py  test_run.py  test_span.py
tests/test_api/test_model/: test_base.py  test_data.py  test_group.py
tests/test_core/: test_db.py  test_linker.py  test_model.py  test_orm.py  test_trace.py  test_utils.py
tests/test_core/test_api/: test_artifact.py  test_base.py  test_filter.py  test_funcs.py  test_link.py  test_node.py
tests/test_core/test_graph/: test_trace.py
tests/test_core/test_model/: test__modeled_types.py  test_base.py  test_dataclasses.py  test_filter.py  test_group.py
tests/test_core/test_serializer/: test_base.py  test_datetime.py  test_json.py
tests/test_extra/: test_aws.py  test_numpy.py  test_pandas.py  test_plotly.py  test_polars.py  test_pyarrow.py  test_pydantic.py
tests/test_extra/test_model/: test_dataclasses.py  test_pydantic.py
tests/test_extra/test_serializer/: test_datetime.py  test_json.py  test_numpy.py  test_pandas.py  test_plotly.py  test_polars.py  test_pyarrow.py
tests/test_extra/test_storage/: test_aws.py
tests/test_extras/: test_aws.py  test_networkx.py  test_numpy.py  test_pandas.py  test_plotly.py  test_polars.py  test_pyarrow.py  test_pydantic.py
tests/test_model/: test_artifact.py  test_base.py  test_data.py  test_group.py  test_markdown.py
tests/test_serializer/: test__core.py  test_core.py  test_numpy.py  test_pandas.py  test_polars.py  test_pyarrow.py
tests/test_storage/: test_aws.py
