[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artigraph"
dynamic = ["version"]
description = "A library for interrelated graphs of artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typing_extensions", "sqlalchemy>=2,<3", "anyio>=3,<4"]

[project.optional-dependencies]
all = ["artigraph[aws,networkx,numpy,pandas,polars,pyarrow,plotly,pydantic]"]
aws = ["boto3>=1,<2"]
networkx = ["networkx>=3,<4"]
numpy = ["numpy>=1,<2", "pandas>=2,<3", "artigraph[pyarrow]"]
pandas = ["pandas>=2,<3", "artigraph[pyarrow]"]
plotly = ["plotly>=5,<6"]
polars = ["polars<1", "artigraph[pyarrow]"]
pyarrow = ["pyarrow>=12,<13"]
pydantic = ["pydantic>=2,<3"]

[project.urls]
Documentation = "https://github.com/rmorshea/artigraph#readme"
Issues = "https://github.com/rmorshea/artigraph/issues"
Source = "https://github.com/rmorshea/artigraph"

# --- Hatch ----------------------------------------------------------------------------------------

[tool.hatch.version]
path = "src/artigraph/__init__.py"

[tool.hatch.envs.default]
features = ["all"]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=7",
  "pytest-asyncio",
  "black>=23.1.0",
  "pyright>=1",
  "ruff>=0.0.243",
  "aiosqlite>=0.19,<1",
  "greenlet>=2,<3",
  "moto>=4,<5",
  "mkdocs>=1.5,<2",
  "mkdocs-material>=9,<10",
  "mkdocstrings[python]>=0.20,<1",
]

[tool.hatch.envs.default.scripts]
cov = ["cov-test", "cov-report"]
cov-report = ["- coverage combine", "coverage report"]
cov-test = "coverage run -m pytest {args:tests}"
docs-build = "mkdocs build --strict"
docs-serve = "mkdocs serve"
format = ["black {args:.}", "ruff --fix {args:.}", "style"]
lint = ["lint-style", "lint-typing"]
lint-style = ["ruff {args:.}", "black --check --diff {args:.}"]
lint-typing = "pyright {args:.}"
test = "pytest {args:tests}"
publish-docs = "mkdocs gh-deploy --force"
publish-pypi = "hatch build && hatch publish"

# --- Pytest ---------------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
python_files = "check*.py test_*.py"
asyncio_mode = "auto"

# --- Black ----------------------------------------------------------------------------------------

[tool.black]
target-version = ["py37"]
line-length = 100
skip-string-normalization = true

# --- Ruff -----------------------------------------------------------------------------------------

[tool.ruff]
target-version = "py37"
line-length = 100
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # SQLAlchemy in Python 3.9 does not support the newest typing syntax
  "UP007",
  # Ignore function call in class definition (see: https://github.com/astral-sh/ruff/issues/4171)
  "RUF009",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ambiguous characters
  "E741",
  # Shadow Python Builtins
  "A003",
]
unfixable = [
  # Don't touch unused expressions
  "F841",
  # Leave unused loop variables
  "B007",
]

[tool.ruff.isort]
known-first-party = ["artigraph"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

# --- Coverage -------------------------------------------------------------------------------------

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
source_pkgs = ["artigraph"]
branch = true

[tool.coverage.paths]
artigraph = ["src/artigraph"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
sort = "Name"
exclude_lines = [
  "no ?cov",
  '\.\.\.',
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  'raise NotImplementedError\(\)',
]


# --- PyRight -----------------------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests"]
